# Crestview

./: .gitignore  ABB Res Stack Read In_01.sas  ABB TXHX Stack ReadIn_py_01.sas  Metric Module _beta02.sas  README.md  Stack ABB TxHx py.ipynb  priceXtemporal sandbox.sas
go/: go.mod  processor
go/cmd/processor/: main.go
go/internal/models/: data_structures.go
go/internal/reader/: reader.go
python/: README.md  pyproject.toml
python/notebooks/legacy/: Stack ABB Reservations.ipynb  Stack ABB TxHx py.ipynb
python/src/: Stack ABB Reservations.ipynb
python/src/rental_analytics/: __init__.py
python/src/rental_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/rental_analytics/data_access/: __init__.py  bank_transactions.py  example_bank_transactions.py  example_categorization.py  loaders.py  raw_injestion.py  transaction_categorization.py
python/src/rental_analytics/finance/: __init__.py  pnl.py
python/src/rental_analytics/pipelines/: __init__.py  full_pipeline.py  pnl_pipeline.py
python/src/rental_analytics/utilities/: __init__.py  dates.py
python/tests/pipelines/: test_pnl_pipeline.py
sas/: ABB TXHX Res Merge_py.sas  ABB TXHX Stack ReadIn_py_01.sas  Metric Module _beta02.sas
scripts/: run.sh
sql/: BMO-alter-playground.sql  BMO-cast-playground.sql  BMO-crossjoin-playground.sql  BMO-insert-playground.sql  BMO-select-playground.sql  BMO-union-playground.sql  ignore-testplayground.sql  infile-raw-BMO-csv.sql
